force-app/main/default/objects/Employee__c/fields/Alternate_Sales_Channel__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Sales_Channel__c</fullName>
    <label>Alternate Sales Channel</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Chanel</valueSetName>
    </valueSet>
</CustomField>