force-app/main/default/objects/Employee__c/fields/Approver_ASM__c.field-meta.xml
<CustomField>
    <fullName>Approver_ASM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee Owner Approver 1</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Employees6</relationshipName>
    <type>Lookup</type>
</CustomField>