force-app/main/default/objects/Employee__c/fields/Approver_RSM__c.field-meta.xml
<CustomField>
    <fullName>Approver_RSM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee Owner Approver 2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Employees7</relationshipName>
    <type>Lookup</type>
</CustomField>