force-app/main/default/objects/Employee__c/fields/ASM_TSM__c.field-meta.xml
<CustomField>
    <fullName>ASM_TSM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee Approver L1</label>
    <lookupFilter>
        <active>false</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>ASM</value>
        </filterItems>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>TSM</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Employees3</relationshipName>
    <type>Lookup</type>
</CustomField>