force-app/main/default/objects/Employee__c/fields/Basic_Pay__c.field-meta.xml
<CustomField>
    <fullName>Basic_Pay__c</fullName>
    <label>Monthly Basic Pay (INR)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>