force-app/main/default/objects/Employee__c/fields/Cloning_is_Completed__c.field-meta.xml
<CustomField>
    <fullName>Cloning_is_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cloning is Completed</label>
    <type>Checkbox</type>
</CustomField>