force-app/main/default/objects/Employee__c/fields/CTC__c.field-meta.xml
<CustomField>
    <fullName>CTC__c</fullName>
    <label>CTC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>