force-app/main/default/objects/Employee__c/fields/Designation__c.field-meta.xml
<CustomField>
    <fullName>Designation__c</fullName>
    <label>Designation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Area Sales Manager</fullName>
            </value>
            <value>
                <fullName>Chief Executive Officer - Sales</fullName>
            </value>
            <value>
                <fullName>Consultant/Mentor</fullName>
            </value>
            <value>
                <fullName>Delivery Boy</fullName>
            </value>
            <value>
                <fullName>Depot In Charge</fullName>
            </value>
            <value>
                <fullName>Deputy Area Sales Manager</fullName>
            </value>
            <value>
                <fullName>Deputy Regional Sales Manager</fullName>
            </value>
            <value>
                <fullName>Deputy Territory Sales Manager</fullName>
            </value>
            <value>
                <fullName>Distributor Salesman</fullName>
            </value>
            <value>
                <fullName>Executive</fullName>
            </value>
            <value>
                <fullName>General  Manager</fullName>
            </value>
            <value>
                <fullName>Interim Sales Representative</fullName>
            </value>
            <value>
                <fullName>Jr.Territory Sales Executive</fullName>
            </value>
            <value>
                <fullName>Junior Territory Sales Executive</fullName>
            </value>
            <value>
                <fullName>Key Accounts Executive</fullName>
            </value>
            <value>
                <fullName>Key Accounts Manager</fullName>
            </value>
            <value>
                <fullName>Management Trainee</fullName>
            </value>
            <value>
                <fullName>Manager</fullName>
            </value>
            <value>
                <fullName>Merchandiser</fullName>
            </value>
            <value>
                <fullName>Regional Sales Manager</fullName>
            </value>
            <value>
                <fullName>Sales Representative</fullName>
            </value>
            <value>
                <fullName>Secondary Sales Associates</fullName>
            </value>
            <value>
                <fullName>Senior Area Sales Manager</fullName>
            </value>
            <value>
                <fullName>Senior Executive</fullName>
            </value>
            <value>
                <fullName>Senior Key Accounts Officer</fullName>
            </value>
            <value>
                <fullName>Senior Regional Sales Manager</fullName>
            </value>
            <value>
                <fullName>Senior Sales &amp; Distribution Manager</fullName>
            </value>
            <value>
                <fullName>Senior Territory Sales Executive</fullName>
            </value>
            <value>
                <fullName>Senior Territory Sales Manager</fullName>
            </value>
            <value>
                <fullName>Territory Sales Executive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>