force-app/main/default/objects/Employee__c/fields/District_In_charge__c.field-meta.xml
<CustomField>
    <fullName>District_In_charge__c</fullName>
    <defaultValue>false</defaultValue>
    <label>District In-charge</label>
    <type>Checkbox</type>
</CustomField>