force-app/main/default/objects/Employee__c/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Division</label>
    <referenceTo>Division__c</referenceTo>
    <relationshipLabel>Employees</relationshipLabel>
    <relationshipName>Employees</relationshipName>
    <type>Lookup</type>
</CustomField>