force-app/main/default/objects/Employee__c/fields/DOJ__c.field-meta.xml
<CustomField>
    <fullName>DOJ__c</fullName>
    <label>DOJ</label>
    <type>Date</type>
</CustomField>