force-app/main/default/objects/Employee__c/fields/Email_Verification_Status__c.field-meta.xml
<CustomField>
    <fullName>Email_Verification_Status__c</fullName>
    <formula>IF(
ISBLANK(User__c),
&quot;Activation Pending&quot;,
IF(
Mail_Id__c &lt;&gt; User__r.Email,
&quot;Pending&quot;,
&quot;Verified&quot;
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email Verification Status</label>
    <type>Text</type>
</CustomField>