force-app/main/default/objects/Employee__c/fields/Employee_Activated_Date__c.field-meta.xml
<CustomField>
    <fullName>Employee_Activated_Date__c</fullName>
    <label>Employee Activated Date</label>
    <type>Date</type>
</CustomField>