force-app/main/default/objects/Employee__c/fields/Employee_Approver_3_HR__c.field-meta.xml
<CustomField>
    <fullName>Employee_Approver_3_HR__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee Approver L3 (HR)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>EmployeeswS13</relationshipName>
    <type>Lookup</type>
</CustomField>