force-app/main/default/objects/Employee__c/fields/Employee_Code__c.field-meta.xml
<CustomField>
    <fullName>Employee_Code__c</fullName>
    <externalId>true</externalId>
    <label>Employee Code</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>