force-app/main/default/objects/Employee__c/fields/Employee_L1_Approver_Name__c.field-meta.xml
<CustomField>
    <fullName>Employee_L1_Approver_Name__c</fullName>
    <label>Employee L1 Approver Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>