force-app/main/default/objects/Employee__c/fields/Employee_L2_Approver_Name__c.field-meta.xml
<CustomField>
    <fullName>Employee_L2_Approver_Name__c</fullName>
    <label>Employee L2 Approver Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>