force-app/main/default/objects/Employee__c/fields/Employee_Owner_Approver_3_HR__c.field-meta.xml
<CustomField>
    <fullName>Employee_Owner_Approver_3_HR__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee Owner Approver 3 (HR)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>EmployeeswSMc</relationshipName>
    <type>Lookup</type>
</CustomField>