force-app/main/default/objects/Employee__c/fields/Employee_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Employee_Remarks__c</fullName>
    <label>Attendance/Leave Remarks</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>