force-app/main/default/objects/Employee__c/fields/Employee_Replaced_With_Name__c.field-meta.xml
<CustomField>
    <fullName>Employee_Replaced_With_Name__c</fullName>
    <label>Employee Replaced With Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>