force-app/main/default/objects/Employee__c/fields/Expense_Approver_1__c.field-meta.xml
<CustomField>
    <fullName>Expense_Approver_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Expense Approver L1</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Employees5</relationshipName>
    <type>Lookup</type>
</CustomField>