force-app/main/default/objects/Employee__c/fields/Expense_Approver_2_Finance_Department__c.field-meta.xml
<CustomField>
    <fullName>Expense_Approver_2_Finance_Department__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Expense Approver L2 (Finance)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>EmployeeswSKR</relationshipName>
    <type>Lookup</type>
</CustomField>