force-app/main/default/objects/Employee__c/fields/Expense_Back_Day_Entry_Limit__c.field-meta.xml
<CustomField>
    <fullName>Expense_Back_Day_Entry_Limit__c</fullName>
    <label>Expense Back Day Entry Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>