force-app/main/default/objects/Employee__c/fields/Expense_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Expense_End_Date__c</fullName>
    <label>Expense End Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>