force-app/main/default/objects/Employee__c/fields/Expense_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Expense_Start_Date__c</fullName>
    <label>Expense Start Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>