force-app/main/default/objects/Employee__c/fields/Gross_Salary__c.field-meta.xml
<CustomField>
    <fullName>Gross_Salary__c</fullName>
    <label>Monthly Gross Salary (INR)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>