force-app/main/default/objects/Employee__c/fields/Headquarter__c.field-meta.xml
<CustomField>
    <fullName>Headquarter__c</fullName>
    <label>Headquarter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>