force-app/main/default/objects/Employee__c/fields/HR_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>HR_Approval_Date__c</fullName>
    <label>HR Approval Date</label>
    <type>DateTime</type>
</CustomField>