force-app/main/default/objects/Employee__c/fields/HR_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>HR_Approval_Status__c</fullName>
    <label>HR Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Approval_Status</valueSetName>
    </valueSet>
</CustomField>