force-app/main/default/objects/Employee__c/fields/HR_Rejected_Date__c.field-meta.xml
<CustomField>
    <fullName>HR_Rejected_Date__c</fullName>
    <label>HR Rejected Date</label>
    <type>DateTime</type>
</CustomField>