force-app/main/default/objects/Employee__c/fields/IMEI_No__c.field-meta.xml
<CustomField>
    <fullName>IMEI_No__c</fullName>
    <label>IMEI No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>