force-app/main/default/objects/Employee__c/fields/In_Activation_Date__c.field-meta.xml
<CustomField>
    <fullName>In_Activation_Date__c</fullName>
    <label>In-Activation Date</label>
    <type>DateTime</type>
</CustomField>