force-app/main/default/objects/Employee__c/fields/Is_Employee_Replaced__c.field-meta.xml
<CustomField>
    <fullName>Is_Employee_Replaced__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Employee Replaced</label>
    <type>Checkbox</type>
</CustomField>