force-app/main/default/objects/Employee__c/fields/Is_Record_Opned_By_Owner__c.field-meta.xml
<CustomField>
    <fullName>Is_Record_Opned_By_Owner__c</fullName>
    <formula>Owner:User.Id == $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Record Opned By Owner</label>
    <type>Checkbox</type>
</CustomField>