force-app/main/default/objects/Employee__c/fields/Is_SSA_DSM__c.field-meta.xml
<CustomField>
    <fullName>Is_SSA_DSM__c</fullName>
    <formula>TEXT(Profile__c) == &apos;DSM&apos; || TEXT(Profile__c) == &apos;SSA&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is_SSA/DSM</label>
    <type>Checkbox</type>
</CustomField>