force-app/main/default/objects/Employee__c/fields/Is_User_Deactivated__c.field-meta.xml
<CustomField>
    <fullName>Is_User_Deactivated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is User Deactivated</label>
    <type>Checkbox</type>
</CustomField>