force-app/main/default/objects/Employee__c/fields/IsDataUpload__c.field-meta.xml
<CustomField>
    <fullName>IsDataUpload__c</fullName>
    <defaultValue>true</defaultValue>
    <label>IsDataUpload</label>
    <type>Checkbox</type>
</CustomField>