force-app/main/default/objects/Employee__c/fields/Leave_Approver_L1__c.field-meta.xml
<CustomField>
    <fullName>Leave_Approver_L1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Leave Approver L1</label>
    <referenceTo>User</referenceTo>
    <relationshipName>EmployeesENj7</relationshipName>
    <type>Lookup</type>
</CustomField>