force-app/main/default/objects/Employee__c/fields/Leave_HR__c.field-meta.xml
<CustomField>
    <fullName>Leave_HR__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>HR (For Leave  Notification)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>EmployeesENkj</relationshipName>
    <type>Lookup</type>
</CustomField>