force-app/main/default/objects/Employee__c/fields/Mail_Id__c.field-meta.xml
<CustomField>
    <fullName>Mail_Id__c</fullName>
    <label>Mail Id</label>
    <required>true</required>
    <type>Email</type>
</CustomField>