force-app/main/default/objects/Employee__c/fields/Minimum_Order_value__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Order_value__c</fullName>
    <label>Minimum Order value (INR)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>