force-app/main/default/objects/Employee__c/fields/Opened_by_Credited_User__c.field-meta.xml
<CustomField>
    <fullName>Opened_by_Credited_User__c</fullName>
    <formula>CreatedById == $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opened by Credited User</label>
    <type>Checkbox</type>
</CustomField>