force-app/main/default/objects/Employee__c/fields/Payroll__c.field-meta.xml
<CustomField>
    <fullName>Payroll__c</fullName>
    <label>Payroll</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Payroll</valueSetName>
    </valueSet>
</CustomField>