force-app/main/default/objects/Employee__c/fields/Payroll_Type__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Type__c</fullName>
    <label>Payroll Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Payroll_Type</valueSetName>
    </valueSet>
</CustomField>