force-app/main/default/objects/Employee__c/fields/PJP_Approver_1__c.field-meta.xml
<CustomField>
    <fullName>PJP_Approver_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PJP Approver L1</label>
    <referenceTo>User</referenceTo>
    <relationshipName>EmployeeswRzv</relationshipName>
    <type>Lookup</type>
</CustomField>