force-app/main/default/objects/Employee__c/fields/PJP_Approver_2__c.field-meta.xml
<CustomField>
    <fullName>PJP_Approver_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PJP Approver L2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>EmployeeswS05</relationshipName>
    <type>Lookup</type>
</CustomField>