force-app/main/default/objects/Employee__c/fields/Primary_Customer_Approver_1__c.field-meta.xml
<CustomField>
    <fullName>Primary_Customer_Approver_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Customer Approver L1</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Employees8</relationshipName>
    <type>Lookup</type>
</CustomField>