force-app/main/default/objects/Employee__c/fields/Primary_Customer_Approver_2__c.field-meta.xml
<CustomField>
    <fullName>Primary_Customer_Approver_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Customer Approver L2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Employees9</relationshipName>
    <type>Lookup</type>
</CustomField>