force-app/main/default/objects/Employee__c/fields/Primary_Customer_Approver_3_CD__c.field-meta.xml
<CustomField>
    <fullName>Primary_Customer_Approver_3_CD__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Customer Approver L3 (Credit)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>EmployeeswS1N</relationshipName>
    <type>Lookup</type>
</CustomField>