force-app/main/default/objects/Employee__c/fields/Primary_Sales_division__c.field-meta.xml
<CustomField>
    <fullName>Primary_Sales_division__c</fullName>
    <label>Primary Sales division</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Division 1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>