force-app/main/default/objects/Employee__c/fields/Relieving_date__c.field-meta.xml
<CustomField>
    <fullName>Relieving_date__c</fullName>
    <label>Relieving Date</label>
    <type>Date</type>
</CustomField>