force-app/main/default/objects/Employee__c/fields/Replaced_For_Name__c.field-meta.xml
<CustomField>
    <fullName>Replaced_For_Name__c</fullName>
    <label>Replaced For Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>