force-app/main/default/objects/Employee__c/fields/ReplacedForUserId__c.field-meta.xml
<CustomField>
    <fullName>ReplacedForUserId__c</fullName>
    <formula>CASESAFEID( Replaced_For__r.User__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ReplacedForUserId</label>
    <type>Text</type>
</CustomField>