force-app/main/default/objects/Employee__c/fields/Replacement_Mapping_Processed__c.field-meta.xml
<CustomField>
    <fullName>Replacement_Mapping_Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Replacement_Mapping_Processed</label>
    <type>Checkbox</type>
</CustomField>