force-app/main/default/objects/Employee__c/fields/Reporting_Manager__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reporting Manager</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>User.Id</field>
            <operation>notEqual</operation>
            <valueField>$Source.User__c</valueField>
        </filterItems>
        <filterItems>
            <field>User.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Employees1</relationshipName>
    <type>Lookup</type>
</CustomField>