force-app/main/default/objects/Employee__c/fields/Reporting_Manager_Name__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Manager_Name__c</fullName>
    <label>Reporting Manager Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>