force-app/main/default/objects/Employee__c/fields/Role_Name__c.field-meta.xml
<CustomField>
    <fullName>Role_Name__c</fullName>
    <formula>IF(User__c != null, User__r.UserRole.Name, Role__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Role Name</label>
    <type>Text</type>
</CustomField>