force-app/main/default/objects/Employee__c/fields/RSM__c.field-meta.xml
<CustomField>
    <fullName>RSM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee Approver L2</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>RSM</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Employees2</relationshipName>
    <type>Lookup</type>
</CustomField>