force-app/main/default/objects/Employee__c/fields/Sales_Channel__c.field-meta.xml
<CustomField>
    <fullName>Sales_Channel__c</fullName>
    <label>Sales Channel</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Chanel</valueSetName>
    </valueSet>
</CustomField>