force-app/main/default/objects/Employee__c/fields/Secondary_Customer_Approver_1__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Customer_Approver_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Secondary Customer Approver L1</label>
    <referenceTo>User</referenceTo>
    <relationshipName>EmployeeswS1X</relationshipName>
    <type>Lookup</type>
</CustomField>