force-app/main/default/objects/Employee__c/fields/Secondary_Customer_Approver_2__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Customer_Approver_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Secondary Customer Approver L2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>EmployeeswS1h</relationshipName>
    <type>Lookup</type>
</CustomField>