force-app/main/default/objects/Employee__c/fields/Shift_Time__c.field-meta.xml
<CustomField>
    <fullName>Shift_Time__c</fullName>
    <label>Shift Time</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Shift_Time</valueSetName>
    </valueSet>
</CustomField>