force-app/main/default/objects/Employee__c/fields/ShowNewFields__c.field-meta.xml
<CustomField>
    <fullName>ShowNewFields__c</fullName>
    <formula>Id = null</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ShowNewFields</label>
    <type>Checkbox</type>
</CustomField>