force-app/main/default/objects/Employee__c/fields/Sr_TSE_TSE__c.field-meta.xml
<CustomField>
    <fullName>Sr_TSE_TSE__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TSE</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>Sr. TSE</value>
        </filterItems>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>TSE</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Employees4</relationshipName>
    <type>Lookup</type>
</CustomField>