force-app/main/default/objects/Employee__c/fields/Street__c.field-meta.xml
<CustomField>
    <fullName>Street__c</fullName>
    <label>Address</label>
    <type>TextArea</type>
</CustomField>