force-app/main/default/objects/Employee__c/fields/TA_limit__c.field-meta.xml
<CustomField>
    <fullName>TA_limit__c</fullName>
    <label>TA limit (INR)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>