force-app/main/default/objects/Employee__c/fields/Territory__c.field-meta.xml
<CustomField>
    <fullName>Territory__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Territory</label>
    <referenceTo>Area__c</referenceTo>
    <relationshipLabel>Employees</relationshipLabel>
    <relationshipName>Employees</relationshipName>
    <type>Lookup</type>
</CustomField>