force-app/main/default/objects/Employee__c/fields/Territory_Sales_Division__c.field-meta.xml
<CustomField>
    <fullName>Territory_Sales_Division__c</fullName>
    <label>Territory Sales Division</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Division 1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>