force-app/main/default/objects/Employee__c/fields/User_Created__c.field-meta.xml
<CustomField>
    <fullName>User_Created__c</fullName>
    <formula>User__c != null</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User Created</label>
    <type>Checkbox</type>
</CustomField>