force-app/main/default/objects/Employee__c/fields/User_Formula__c.field-meta.xml
<CustomField>
    <fullName>User_Formula__c</fullName>
    <formula>User__r.FirstName +&apos; &apos;+User__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User</label>
    <type>Text</type>
</CustomField>