force-app/main/default/objects/Employee__c/fields/User_Id__c.field-meta.xml
<CustomField>
    <fullName>User_Id__c</fullName>
    <formula>User__r.User_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User Id</label>
    <type>Text</type>
</CustomField>