force-app/main/default/objects/Employee__c/fields/User_Is_Active__c.field-meta.xml
<CustomField>
    <fullName>User_Is_Active__c</fullName>
    <formula>User__r.IsActive</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User Is Active</label>
    <type>Checkbox</type>
</CustomField>