force-app/main/default/objects/Employee__c/fields/User_Name__c.field-meta.xml
<CustomField>
    <fullName>User_Name__c</fullName>
    <label>Username</label>
    <required>true</required>
    <type>Email</type>
</CustomField>