force-app/main/default/objects/Employee__c/fields/User_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>User_Record_Id__c</fullName>
    <formula>User__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User Record Id</label>
    <type>Text</type>
</CustomField>