force-app/main/default/objects/Employee__c/fields/User_Type__c.field-meta.xml
<CustomField>
    <fullName>User_Type__c</fullName>
    <label>Employee Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Employee_Type</valueSetName>
    </valueSet>
</CustomField>