force-app/main/default/objects/Employee__c/fields/Variable_Pay__c.field-meta.xml
<CustomField>
    <fullName>Variable_Pay__c</fullName>
    <label>Variable Pay</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>